# rechunk

./: .gitignore  pyproject.toml
benchmarks/: basic.py
rechunk/: __init__.py  _rechunk.py
tests/: test_rechunk.py
