[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "rechunk"
author = "Tom Augspurger"
author-email = "tom.augspurger88@gmail.com"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "dask[array]",
    "distributed",
    "xarray",
    "zarr",
]